[gd_scene load_steps=5 format=3 uid="uid://cbahcc3f7wy0r"]

[ext_resource type="Script" path="res://boss/boss.gd" id="1_pejr0"]
[ext_resource type="Texture2D" uid="uid://y6w6nuh03lbd" path="res://boss/seal.png" id="2_q01oy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ytxcv"]
size = Vector2(161, 114)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_03pxx"]
size = Vector2(161, 114)

[node name="Boss" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_pejr0")
health = 100
speed = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["enemy"]]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_ytxcv")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.09, 0.09)
texture = ExtResource("2_q01oy")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_03pxx")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="BossHealth" type="Label" parent="."]
offset_left = -20.0
offset_top = 30.0
offset_right = 20.0
offset_bottom = 53.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
